--- a/index.html
+++ b/index.html
@@ -55,18 +55,22 @@
     }
 
     .banner {
-      background: url('logo-amitges.png') no-repeat center center; /* Aquí va la imagen del logo */
-      background-size: contain; /* La imagen se ajusta al tamaño */
+      background: linear-gradient(to bottom, #FFFFFF, #F3EDF1); /* De blanco a rosa claro */
       padding: 100px 20px 40px;
       text-align: center;
       position: relative;
       overflow: hidden;
     }
 
+    .banner h1 {
+      font-size: 2.8em;
+      margin: 0;
+      color: #5A3D57;
+    }
+
     .productos-destacados {
       padding: 50px 20px;
       text-align: center;
-      background-color: #FFFFFF; /* Fondo blanco para los productos */
     }
 
     .productos-destacados h2 {
@@ -85,7 +89,7 @@
 
     .producto {
       width: 260px;
-      background-color: #FFFFFF; /* Fondo blanco */
+      background-color: #F3EDF1;
       border-radius: 12px;
       padding: 20px;
       box-shadow: 0 4px 8px rgba(90, 61, 87, 0.1);
@@ -138,21 +142,24 @@
       font-size: 0.95em;
     }
 
+    /* Fondo decorativo en Productos Destacados */
+    .fondo-logo {
+      background-image: url('logo-fondo.png');
+      background-repeat: no-repeat;
+      background-position: center 80px;
+      background-size: 300px;
+      background-attachment: scroll;
+      position: relative;
+      z-index: 1;
+    }
+
     /* Línea morada */
     .linea-morada {
-      width: 60%; /* Cambié el tamaño para que no llegue hasta el final */
+      width: 100%;
       height: 2px;
       background-color: #5A3D57;
-      margin: 30px auto;
+      margin-top: 30px;
     }
-
-    /* Fondo blanco entre las dos líneas */
-    .linea-fondo-blanco {
-      background-color: #FFFFFF;
-      height: 20px;
-      width: 100%;
-    }
-
   </style>
 </head>
 <body>
@@ -173,22 +180,54 @@
 
   <!-- Banner -->
   <section class="banner">
-    <!-- El logo ya está en el fondo, por eso no es necesario el texto "¡Verano SS 25!" -->
+    <h1>¡Verano SS 25!</h1>
   </section>
 
   <!-- Línea morada -->
   <div class="linea-morada"></div>
 
-  <!-- Fondo blanco entre las líneas -->
-  <div class="linea-fondo-blanco"></div>
-
-  <!-- Productos destacados con fondo blanco -->
-  <section class="productos-destacados" id="shop">
+  <!-- Productos destacados con fondo de logo -->
+  <section class="productos-destacados fondo-logo" id="shop">
     <h2>¡Verano SS 25!</h2>
     <div class="productos">
-      <!-- Aquí he eliminado los productos anteriores -->
       <div class="producto">
-        <p>¡Próximamente más productos!</p>
+        <img src="producto1.jpg" alt="Producto 1">
+        <p>Ropa</p>
+        <p>$20.00</p>
+        <button onclick="toggleRopa()">Elegir</button>
+        <div id="ropa" style="display:none;">
+          <ul>
+            <li>Señora</li>
+            <li>Caballero</li>
+            <li>Niñ@</li>
+          </ul>
+        </div>
+      </div>
+      <div class="producto">
+        <img src="producto2.jpg" alt="Producto 2">
+        <p>Calzado</p>
+        <p>$30.00</p>
+        <button onclick="toggleCalzado()">Elegir</button>
+        <div id="calzado" style="display:none;">
+          <ul>
+            <li>Señora</li>
+            <li>Caballero</li>
+            <li>Niñ@</li>
+          </ul>
+        </div>
+      </div>
+      <div class="producto">
+        <img src="producto3.jpg" alt="Producto 3">
+        <p>Ropa interior</p>
+        <p>$25.00</p>
+        <button onclick="toggleRopaInterior()">Elegir</button>
+        <div id="ropaInterior" style="display:none;">
+          <ul>
+            <li>Señora</li>
+            <li>Caballero</li>
+            <li>Niñ@</li>
+          </ul>
+        </div>
       </div>
     </div>
   </section>
