--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       font-family: 'Georgia', serif;
       margin: 0;
       padding: 0;
-      background-color: #F3EDF1; /* Rosa claro como fondo principal */
+      background-color: #FFFFFF;
       color: #2D1D2B;
     }
 
@@ -55,27 +55,29 @@
     }
 
     .banner {
-      background: linear-gradient(to bottom, #FFFFFF, #F3EDF1); /* De blanco a rosa claro */
+      background-color: #F3EDF1;
       padding: 100px 20px 40px;
       text-align: center;
       position: relative;
       overflow: hidden;
     }
 
-    .banner h1 {
-      font-size: 2.8em;
-      margin: 0;
-      color: #5A3D57;
+    .banner img {
+      max-width: 100%;
+      height: auto;
+    }
+
+    .linea-morada {
+      height: 2px;
+      background-color: #5A3D57;
+      width: 80%;
+      margin: 20px auto;
     }
 
     .productos-destacados {
       padding: 50px 20px;
       text-align: center;
-    }
-
-    .productos-destacados h2 {
-      font-size: 2.2em;
-      margin-bottom: 40px;
+      background-color: #F3EDF1;
     }
 
     .productos {
@@ -83,8 +85,6 @@
       justify-content: center;
       flex-wrap: wrap;
       gap: 30px;
-      position: relative;
-      z-index: 2;
     }
 
     .producto {
@@ -100,12 +100,6 @@
       transform: translateY(-5px);
     }
 
-    .producto img {
-      width: 100%;
-      height: auto;
-      border-radius: 8px;
-    }
-
     .producto button {
       background-color: #5A3D57;
       color: white;
@@ -119,6 +113,33 @@
 
     .producto button:hover {
       background-color: #402A3C;
+    }
+
+    .categorias {
+      display: none;
+      margin-top: 30px;
+      background-color: #F3EDF1;
+      padding: 20px;
+      border-radius: 12px;
+      box-shadow: 0 4px 8px rgba(90, 61, 87, 0.1);
+    }
+
+    .categorias ul {
+      list-style: none;
+      padding: 0;
+      text-align: left;
+    }
+
+    .categorias ul li {
+      font-size: 1.2em;
+      margin-bottom: 10px;
+    }
+
+    .linea-separadora {
+      height: 2px;
+      background-color: #5A3D57;
+      width: 80%;
+      margin: 50px auto;
     }
 
     .sobre-nosotras, .contacto {
@@ -141,25 +162,6 @@
       color: white;
       font-size: 0.95em;
     }
-
-    /* Fondo decorativo en Productos Destacados */
-    .fondo-logo {
-      background-image: url('logo-fondo.png');
-      background-repeat: no-repeat;
-      background-position: center 80px;
-      background-size: 300px;
-      background-attachment: scroll;
-      position: relative;
-      z-index: 1;
-    }
-
-    /* Línea morada */
-    .linea-morada {
-      width: 100%;
-      height: 2px;
-      background-color: #5A3D57;
-      margin-top: 30px;
-    }
   </style>
 </head>
 <body>
@@ -179,61 +181,62 @@
   </header>
 
   <!-- Banner -->
-  <section class="banner">
-    <h1>¡Verano SS 25!</h1>
+  <section class="banner" id="home">
+    <!-- Imagen del banner (en lugar de "¡Verano SS 25!") -->
+    <img src="imagen-banner.jpg" alt="Verano SS 25">
   </section>
 
-  <!-- Línea morada -->
+  <!-- Línea morada sin fondo blanco -->
   <div class="linea-morada"></div>
 
-  <!-- Productos destacados con fondo de logo -->
-  <section class="productos-destacados fondo-logo" id="shop">
+  <!-- Productos destacados -->
+  <section class="productos-destacados" id="shop">
     <h2>¡Verano SS 25!</h2>
     <div class="productos">
       <div class="producto">
-        <img src="producto1.jpg" alt="Producto 1">
         <p>Ropa</p>
         <p>$20.00</p>
-        <button onclick="toggleRopa()">Elegir</button>
-        <div id="ropa" style="display:none;">
+        <button onclick="toggleCategorias('ropa')">Elegir</button>
+        <div class="categorias" id="categorias-ropa">
+          <h3>Elige una categoría:</h3>
           <ul>
-            <li>Señora</li>
-            <li>Caballero</li>
-            <li>Niñ@</li>
+            <li><a href="#senora">Señora</a></li>
+            <li><a href="#caballero">Caballero</a></li>
+            <li><a href="#nino">Niñ@</a></li>
           </ul>
         </div>
       </div>
       <div class="producto">
-        <img src="producto2.jpg" alt="Producto 2">
         <p>Calzado</p>
         <p>$30.00</p>
-        <button onclick="toggleCalzado()">Elegir</button>
-        <div id="calzado" style="display:none;">
+        <button onclick="toggleCategorias('calzado')">Elegir</button>
+        <div class="categorias" id="categorias-calzado">
+          <h3>Elige una categoría:</h3>
           <ul>
-            <li>Señora</li>
-            <li>Caballero</li>
-            <li>Niñ@</li>
+            <li><a href="#senora">Señora</a></li>
+            <li><a href="#caballero">Caballero</a></li>
+            <li><a href="#nino">Niñ@</a></li>
           </ul>
         </div>
       </div>
       <div class="producto">
-        <img src="producto3.jpg" alt="Producto 3">
         <p>Ropa interior</p>
         <p>$25.00</p>
-        <button onclick="toggleRopaInterior()">Elegir</button>
-        <div id="ropaInterior" style="display:none;">
+        <button onclick="toggleCategorias('ropa-interior')">Elegir</button>
+        <div class="categorias" id="categorias-ropa-interior">
+          <h3>Elige una categoría:</h3>
           <ul>
-            <li>Señora</li>
-            <li>Caballero</li>
-            <li>Niñ@</li>
+            <li><a href="#senora">Señora</a></li>
+            <li><a href="#caballero">Caballero</a></li>
+            <li><a href="#nino">Niñ@</a></li>
           </ul>
         </div>
       </div>
     </div>
   </section>
 
-  <!-- Línea morada -->
-  <div class="linea-morada"></div>
+  <!-- Línea separadora entre productos y "Sobre nosotras" -->
+  <div class="linea-separadora"></div>
 
   <!-- Sobre nosotras -->
   <section class="sobre-nosotras" id="about">
@@ -256,20 +259,18 @@
   </footer>
 
   <script>
-    // Función para mostrar/ocultar las opciones de "Elegir"
-    function toggleRopa() {
-      var ropa = document.getElementById('ropa');
-      ropa.style.display = ropa.style.display === 'none' ? 'block' : 'none';
-    }
+    function toggleCategorias(categoria) {
+      const categorias = document.querySelectorAll('.categorias');
+      const categoriaElemento = document.getElementById(`categorias-${categoria}`);
 
-    function toggleCalzado() {
-      var calzado = document.getElementById('calzado');
-      calzado.style.display = calzado.style.display === 'none' ? 'block' : 'none';
-    }
-
-    function toggleRopaInterior() {
-      var ropaInterior = document.getElementById('ropaInterior');
-      ropaInterior.style.display = ropaInterior.style.display === 'none' ? 'block' : 'none';
+      // Toggle la visibilidad de la categoría
+      if (categoriaElemento.style.display === 'block') {
+        categoriaElemento.style.display = 'none';
+      } else {
+        // Ocultar todas las demás categorías
+        categorias.forEach(c => c.style.display = 'none');
+        categoriaElemento.style.display = 'block';
+      }
     }
   </script>
 </body>
