--- a/index.html
+++ b/index.html
@@ -74,6 +74,13 @@
       margin: 20px auto;
     }
 
+    .fondo-blanco {
+      background-color: white;
+      height: 20px;
+      width: 80%;
+      margin: 0 auto;
+    }
+
     .productos-destacados {
       padding: 50px 20px;
       text-align: center;
@@ -187,6 +194,12 @@
   </section>
 
   <!-- Línea morada sin fondo blanco -->
+  <div class="linea-morada"></div>
+
+  <!-- Fondo blanco entre las líneas -->
+  <div class="fondo-blanco"></div>
+
+  <!-- Línea morada -->
   <div class="linea-morada"></div>
 
   <!-- Productos destacados -->
