--- a/index.html
+++ b/index.html
@@ -74,13 +74,6 @@
       margin: 20px auto;
     }
 
-    .fondo-blanco {
-      background-color: white;
-      height: 20px;
-      width: 80%;
-      margin: 0 auto;
-    }
-
     .productos-destacados {
       padding: 50px 20px;
       text-align: center;
@@ -169,6 +162,11 @@
       color: white;
       font-size: 0.95em;
     }
+
+    /* Fondo blanco desde ¡Verano SS 25! hasta Sobre nosotras */
+    .fondo-blanco {
+      background-color: #FFFFFF;
+    }
   </style>
 </head>
 <body>
@@ -196,14 +194,8 @@
   <!-- Línea morada sin fondo blanco -->
   <div class="linea-morada"></div>
 
-  <!-- Fondo blanco entre las líneas -->
-  <div class="fondo-blanco"></div>
-
-  <!-- Línea morada -->
-  <div class="linea-morada"></div>
-
-  <!-- Productos destacados -->
-  <section class="productos-destacados" id="shop">
+  <!-- Productos destacados con fondo blanco -->
+  <section class="productos-destacados fondo-blanco" id="shop">
     <h2>¡Verano SS 25!</h2>
     <div class="productos">
       <div class="producto">
@@ -252,13 +244,13 @@
   <div class="linea-separadora"></div>
 
   <!-- Sobre nosotras -->
-  <section class="sobre-nosotras" id="about">
+  <section class="sobre-nosotras fondo-blanco" id="about">
     <h2>Sobre nosotras</h2>
     <p>Somos Reyes y Yolanda, dos mujeres y mamás emprendedoras 💜</p>
   </section>
 
   <!-- Contacto -->
-  <section class="contacto" id="contact">
+  <section class="contacto fondo-blanco" id="contact">
     <h2>Contacto</h2>
     <p>Teléfono: 640 897645</p>
     <p>Email: <a href="mailto:amitgesbyreyesyyoli@gmail.com">amitgesbyreyesyyoli@gmail.com</a></p>
