--- a/index.html
+++ b/index.html
@@ -200,40 +200,37 @@
     <div class="productos">
       <div class="producto">
         <p>Ropa</p>
-        <p>$20.00</p>
         <button onclick="toggleCategorias('ropa')">Elegir</button>
         <div class="categorias" id="categorias-ropa">
           <h3>Elige una categoría:</h3>
           <ul>
-            <li><a href="#senora">Señora</a></li>
-            <li><a href="#caballero">Caballero</a></li>
-            <li><a href="#nino">Niñ@</a></li>
+            <li><a href="ropa-senora.html">Señora</a></li>
+            <li><a href="ropa-caballero.html">Caballero</a></li>
+            <li><a href="ropa-nino.html">Niñ@</a></li>
           </ul>
         </div>
       </div>
       <div class="producto">
         <p>Calzado</p>
-        <p>$30.00</p>
         <button onclick="toggleCategorias('calzado')">Elegir</button>
         <div class="categorias" id="categorias-calzado">
           <h3>Elige una categoría:</h3>
           <ul>
-            <li><a href="#senora">Señora</a></li>
-            <li><a href="#caballero">Caballero</a></li>
-            <li><a href="#nino">Niñ@</a></li>
+            <li><a href="calzado-senora.html">Señora</a></li>
+            <li><a href="calzado-caballero.html">Caballero</a></li>
+            <li><a href="calzado-nino.html">Niñ@</a></li>
           </ul>
         </div>
       </div>
       <div class="producto">
         <p>Ropa interior</p>
-        <p>$25.00</p>
         <button onclick="toggleCategorias('ropa-interior')">Elegir</button>
         <div class="categorias" id="categorias-ropa-interior">
           <h3>Elige una categoría:</h3>
           <ul>
-            <li><a href="#senora">Señora</a></li>
-            <li><a href="#caballero">Caballero</a></li>
-            <li><a href="#nino">Niñ@</a></li>
+            <li><a href="ropa-interior-senora.html">Señora</a></li>
+            <li><a href="ropa-interior-caballero.html">Caballero</a></li>
+            <li><a href="ropa-interior-nino.html">Niñ@</a></li>
           </ul>
         </div>
       </div>
