--- a/index.html
+++ b/index.html
@@ -56,28 +56,25 @@
 
     .banner {
       background-color: #F3EDF1;
-      padding: 100px 20px 40px;
+      padding: 60px 20px;
       text-align: center;
-      position: relative;
-      overflow: hidden;
     }
 
-    .banner img {
-      max-width: 100%;
-      height: auto;
-    }
-
-    .linea-morada {
-      height: 2px;
-      background-color: #5A3D57;
-      width: 80%;
-      margin: 20px auto;
+    .banner h1 {
+      font-size: 2.8em;
+      margin: 0;
+      color: #5A3D57;
     }
 
     .productos-destacados {
       padding: 50px 20px;
       text-align: center;
-      background-color: #F3EDF1;
+      background-color: white;
+    }
+
+    .productos-destacados h2 {
+      font-size: 2.2em;
+      margin-bottom: 40px;
     }
 
     .productos {
@@ -115,44 +112,24 @@
       background-color: #402A3C;
     }
 
-    .categorias {
+    .categoria {
       display: none;
       margin-top: 30px;
-      background-color: #F3EDF1;
-      padding: 20px;
-      border-radius: 12px;
-      box-shadow: 0 4px 8px rgba(90, 61, 87, 0.1);
-    }
-
-    .categorias ul {
-      list-style: none;
-      padding: 0;
-      text-align: left;
-    }
-
-    .categorias ul li {
-      font-size: 1.2em;
-      margin-bottom: 10px;
-    }
-
-    .linea-separadora {
-      height: 2px;
-      background-color: #5A3D57;
-      width: 80%;
-      margin: 50px auto;
-    }
-
-    .sobre-nosotras, .contacto {
-      background-color: #F3EDF1;
-      padding: 50px 20px;
       text-align: center;
     }
 
-    .sobre-nosotras p,
-    .contacto p {
-      font-size: 1.2em;
-      max-width: 700px;
-      margin: auto;
+    .categoria a {
+      display: inline-block;
+      margin: 10px;
+      background-color: #5A3D57;
+      color: white;
+      padding: 10px 20px;
+      border-radius: 6px;
+      text-decoration: none;
+    }
+
+    .categoria a:hover {
+      background-color: #402A3C;
     }
 
     footer {
@@ -163,13 +140,14 @@
       font-size: 0.95em;
     }
 
-    /* Fondo blanco desde ¡Verano SS 25! hasta Sobre nosotras */
-    .fondo-blanco {
-      background-color: #FFFFFF;
+    .linea {
+      border-top: 2px solid #5A3D57;
+      margin: 40px 0;
     }
   </style>
 </head>
 <body>
+
   <!-- Encabezado -->
   <header>
     <div class="logo">
@@ -186,73 +164,56 @@
   </header>
 
   <!-- Banner -->
-  <section class="banner" id="home">
-    <!-- Imagen del banner (en lugar de "¡Verano SS 25!") -->
-    <img src="imagen-banner.jpg" alt="Verano SS 25">
+  <section class="banner">
+    <h1>¡Verano SS 25!</h1>
   </section>
 
-  <!-- Línea morada sin fondo blanco -->
-  <div class="linea-morada"></div>
-
-  <!-- Productos destacados con fondo blanco -->
-  <section class="productos-destacados fondo-blanco" id="shop">
+  <!-- Productos destacados -->
+  <section class="productos-destacados" id="shop">
     <h2>¡Verano SS 25!</h2>
+
+    <!-- Recuadros de selección -->
     <div class="productos">
       <div class="producto">
-        <p>Ropa</p>
-        <button onclick="toggleCategorias('ropa')">Elegir</button>
-        <div class="categorias" id="categorias-ropa">
-          <h3>Elige una categoría:</h3>
-          <ul>
-            <li><a href="ropa-senora.html">Señora</a></li>
-            <li><a href="ropa-caballero.html">Caballero</a></li>
-            <li><a href="ropa-nino.html">Niñ@</a></li>
-          </ul>
+        <h3>Ropa</h3>
+        <button onclick="toggleCategory('ropa')">Elegir</button>
+        <div id="ropa" class="categoria">
+          <a href="#" onclick="showSubCategory('ropa-senora')">Señora</a>
+          <a href="#" onclick="showSubCategory('ropa-caballero')">Caballero</a>
+          <a href="#" onclick="showSubCategory('ropa-nino')">Niñ@</a>
         </div>
       </div>
+
       <div class="producto">
-        <p>Calzado</p>
-        <button onclick="toggleCategorias('calzado')">Elegir</button>
-        <div class="categorias" id="categorias-calzado">
-          <h3>Elige una categoría:</h3>
-          <ul>
-            <li><a href="calzado-senora.html">Señora</a></li>
-            <li><a href="calzado-caballero.html">Caballero</a></li>
-            <li><a href="calzado-nino.html">Niñ@</a></li>
-          </ul>
+        <h3>Calzado</h3>
+        <button onclick="toggleCategory('calzado')">Elegir</button>
+        <div id="calzado" class="categoria">
+          <a href="#">Señora</a>
+          <a href="#">Caballero</a>
+          <a href="#">Niñ@</a>
         </div>
       </div>
+
       <div class="producto">
-        <p>Ropa interior</p>
-        <button onclick="toggleCategorias('ropa-interior')">Elegir</button>
-        <div class="categorias" id="categorias-ropa-interior">
-          <h3>Elige una categoría:</h3>
-          <ul>
-            <li><a href="ropa-interior-senora.html">Señora</a></li>
-            <li><a href="ropa-interior-caballero.html">Caballero</a></li>
-            <li><a href="ropa-interior-nino.html">Niñ@</a></li>
-          </ul>
+        <h3>Ropa interior</h3>
+        <button onclick="toggleCategory('ropa-interior')">Elegir</button>
+        <div id="ropa-interior" class="categoria">
+          <a href="#">Señora</a>
+          <a href="#">Caballero</a>
+          <a href="#">Niñ@</a>
         </div>
       </div>
     </div>
-  </section>
 
-  <!-- Línea separadora entre productos y "Sobre nosotras" -->
-  <div class="linea-separadora"></div>
+    <!-- Línea divisoria -->
+    <div class="linea"></div>
+
+  </section>
 
   <!-- Sobre nosotras -->
-  <section class="sobre-nosotras fondo-blanco" id="about">
+  <section class="sobre-nosotras" id="about">
     <h2>Sobre nosotras</h2>
     <p>Somos Reyes y Yolanda, dos mujeres y mamás emprendedoras 💜</p>
-  </section>
-
-  <!-- Contacto -->
-  <section class="contacto fondo-blanco" id="contact">
-    <h2>Contacto</h2>
-    <p>Teléfono: 640 897645</p>
-    <p>Email: <a href="mailto:amitgesbyreyesyyoli@gmail.com">amitgesbyreyesyyoli@gmail.com</a></p>
-    <p>Instagram: <a href="https://www.instagram.com/amitgesbyreyesyyoli" target="_blank">@amitgesbyreyesyyoli</a></p>
-    <p>Dirección: Avenida Castellón, 30, Benicasim, Castellón</p>
   </section>
 
   <!-- Pie de página -->
@@ -260,20 +221,24 @@
     <p>&copy; 2025 Amitges by Reyes & Yoli</p>
   </footer>
 
+  <!-- Scripts -->
   <script>
-    function toggleCategorias(categoria) {
-      const categorias = document.querySelectorAll('.categorias');
-      const categoriaElemento = document.getElementById(`categorias-${categoria}`);
-
-      // Toggle la visibilidad de la categoría
-      if (categoriaElemento.style.display === 'block') {
-        categoriaElemento.style.display = 'none';
+    // Función para mostrar y ocultar categorías
+    function toggleCategory(category) {
+      var categoryElement = document.getElementById(category);
+      if (categoryElement.style.display === "block") {
+        categoryElement.style.display = "none";
       } else {
-        // Ocultar todas las demás categorías
-        categorias.forEach(c => c.style.display = 'none');
-        categoriaElemento.style.display = 'block';
+        categoryElement.style.display = "block";
       }
     }
+
+    // Función para cambiar a la subcategoría
+    function showSubCategory(category) {
+      alert("Cargando productos para: " + category);
+      // Aquí puedes agregar el código para redirigir o mostrar más información de cada categoría
+    }
   </script>
+
 </body>
 </html>
