--- a/index.html
+++ b/index.html
@@ -55,29 +55,25 @@
     }
 
     .banner {
-      background-color: #F3EDF1;
-      padding: 100px 20px 40px;
+      background-color: #F3EDF1;  /* Rosa débil */
+      padding: 60px 20px;
       text-align: center;
-      position: relative;
-      overflow: hidden;
     }
 
-    .banner img {
-      max-width: 100%;
-      height: auto;
-    }
-
-    .linea-morada {
-      height: 2px;
-      background-color: #5A3D57;
-      width: 80%;
-      margin: 20px auto;
+    .banner h1 {
+      font-size: 2.8em;
+      margin: 0;
+      color: #5A3D57;
     }
 
     .productos-destacados {
       padding: 50px 20px;
       text-align: center;
-      background-color: #F3EDF1;
+    }
+
+    .productos-destacados h2 {
+      font-size: 2.2em;
+      margin-bottom: 40px;
     }
 
     .productos {
@@ -100,6 +96,12 @@
       transform: translateY(-5px);
     }
 
+    .producto img {
+      width: 100%;
+      height: auto;
+      border-radius: 8px;
+    }
+
     .producto button {
       background-color: #5A3D57;
       color: white;
@@ -115,41 +117,14 @@
       background-color: #402A3C;
     }
 
-    .categorias {
-      display: none;
-      margin-top: 30px;
-      background-color: #F3EDF1;
-      padding: 20px;
-      border-radius: 12px;
-      box-shadow: 0 4px 8px rgba(90, 61, 87, 0.1);
-    }
-
-    .categorias ul {
-      list-style: none;
-      padding: 0;
-      text-align: left;
-    }
-
-    .categorias ul li {
-      font-size: 1.2em;
-      margin-bottom: 10px;
-    }
-
-    .linea-separadora {
-      height: 2px;
-      background-color: #5A3D57;
-      width: 80%;
-      margin: 50px auto;
-    }
-
-    .sobre-nosotras, .contacto {
-      background-color: #F3EDF1;
+    /* Aplicando el fondo rosa débil en Sobre Nosotras */
+    .sobre-nosotras {
+      background-color: #F3EDF1;  /* Rosa débil */
       padding: 50px 20px;
       text-align: center;
     }
 
-    .sobre-nosotras p,
-    .contacto p {
+    .sobre-nosotras p {
       font-size: 1.2em;
       max-width: 700px;
       margin: auto;
@@ -161,11 +136,6 @@
       text-align: center;
       color: white;
       font-size: 0.95em;
-    }
-
-    /* Fondo blanco desde ¡Verano SS 25! hasta Sobre nosotras */
-    .fondo-blanco {
-      background-color: #FFFFFF;
     }
   </style>
 </head>
@@ -186,94 +156,38 @@
   </header>
 
   <!-- Banner -->
-  <section class="banner" id="home">
-    <!-- Imagen del banner (en lugar de "¡Verano SS 25!") -->
-    <img src="imagen-banner.jpg" alt="Verano SS 25">
+  <section class="banner">
+    <h1>¡Verano SS 25!</h1>
   </section>
 
-  <!-- Línea morada sin fondo blanco -->
-  <div class="linea-morada"></div>
-
-  <!-- Productos destacados con fondo blanco -->
-  <section class="productos-destacados fondo-blanco" id="shop">
+  <!-- Productos destacados -->
+  <section class="productos-destacados" id="shop">
     <h2>¡Verano SS 25!</h2>
     <div class="productos">
       <div class="producto">
         <p>Ropa</p>
-        <button onclick="toggleCategorias('ropa')">Elegir</button>
-        <div class="categorias" id="categorias-ropa">
-          <h3>Elige una categoría:</h3>
-          <ul>
-            <li><a href="ropa-senora.html">Señora</a></li>
-            <li><a href="ropa-caballero.html">Caballero</a></li>
-            <li><a href="ropa-nino.html">Niñ@</a></li>
-          </ul>
-        </div>
+        <button>Elegir</button>
       </div>
       <div class="producto">
         <p>Calzado</p>
-        <button onclick="toggleCategorias('calzado')">Elegir</button>
-        <div class="categorias" id="categorias-calzado">
-          <h3>Elige una categoría:</h3>
-          <ul>
-            <li><a href="calzado-senora.html">Señora</a></li>
-            <li><a href="calzado-caballero.html">Caballero</a></li>
-            <li><a href="calzado-nino.html">Niñ@</a></li>
-          </ul>
-        </div>
+        <button>Elegir</button>
       </div>
       <div class="producto">
         <p>Ropa interior</p>
-        <button onclick="toggleCategorias('ropa-interior')">Elegir</button>
-        <div class="categorias" id="categorias-ropa-interior">
-          <h3>Elige una categoría:</h3>
-          <ul>
-            <li><a href="ropa-interior-senora.html">Señora</a></li>
-            <li><a href="ropa-interior-caballero.html">Caballero</a></li>
-            <li><a href="ropa-interior-nino.html">Niñ@</a></li>
-          </ul>
-        </div>
+        <button>Elegir</button>
       </div>
     </div>
   </section>
 
-  <!-- Línea separadora entre productos y "Sobre nosotras" -->
-  <div class="linea-separadora"></div>
-
   <!-- Sobre nosotras -->
-  <section class="sobre-nosotras fondo-blanco" id="about">
+  <section class="sobre-nosotras" id="about">
     <h2>Sobre nosotras</h2>
     <p>Somos Reyes y Yolanda, dos mujeres y mamás emprendedoras 💜</p>
-  </section>
-
-  <!-- Contacto -->
-  <section class="contacto fondo-blanco" id="contact">
-    <h2>Contacto</h2>
-    <p>Teléfono: 640 897645</p>
-    <p>Email: <a href="mailto:amitgesbyreyesyyoli@gmail.com">amitgesbyreyesyyoli@gmail.com</a></p>
-    <p>Instagram: <a href="https://www.instagram.com/amitgesbyreyesyyoli" target="_blank">@amitgesbyreyesyyoli</a></p>
-    <p>Dirección: Avenida Castellón, 30, Benicasim, Castellón</p>
   </section>
 
   <!-- Pie de página -->
   <footer>
     <p>&copy; 2025 Amitges by Reyes & Yoli</p>
   </footer>
-
-  <script>
-    function toggleCategorias(categoria) {
-      const categorias = document.querySelectorAll('.categorias');
-      const categoriaElemento = document.getElementById(`categorias-${categoria}`);
-
-      // Toggle la visibilidad de la categoría
-      if (categoriaElemento.style.display === 'block') {
-        categoriaElemento.style.display = 'none';
-      } else {
-        // Ocultar todas las demás categorías
-        categorias.forEach(c => c.style.display = 'none');
-        categoriaElemento.style.display = 'block';
-      }
-    }
-  </script>
 </body>
 </html>
