--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     }
 
     .banner {
-      background-color: #F3EDF1; /* Rosa débil */
+      background-color: #F3EDF1;
       padding: 60px 20px;
       text-align: center;
     }
@@ -81,6 +81,8 @@
       justify-content: center;
       flex-wrap: wrap;
       gap: 30px;
+      position: relative;
+      z-index: 2;
     }
 
     .producto {
@@ -117,14 +119,15 @@
       background-color: #402A3C;
     }
 
-    /* Fondo rosa débil en Sobre Nosotras */
-    .sobre-nosotras {
-      background-color: #F3EDF1; /* Rosa débil */
+    .sobre-nosotras,
+    .contacto {
+      background-color: #F3EDF1;
       padding: 50px 20px;
       text-align: center;
     }
 
-    .sobre-nosotras p {
+    .sobre-nosotras p,
+    .contacto p {
       font-size: 1.2em;
       max-width: 700px;
       margin: auto;
@@ -138,29 +141,56 @@
       font-size: 0.95em;
     }
 
-    /* Línea entre secciones */
+    /* Fondo rosa claro en "Sobre Nosotras" */
+    .fondo-rosa {
+      background-color: #F3EDF1;
+      padding-bottom: 50px;
+    }
+
+    /* Fondo decorativo en Productos Destacados */
+    .fondo-logo {
+      background-image: url('logo-fondo.png');
+      background-repeat: no-repeat;
+      background-position: center 80px;
+      background-size: 300px;
+      background-attachment: scroll;
+      position: relative;
+      z-index: 1;
+    }
+
+    /* Líneas de separación */
     .linea {
       height: 2px;
       background-color: #5A3D57;
       margin: 40px 0;
     }
 
-    /* Estilo para los botones "Elegir" */
+    /* Cambio en botones y enlaces */
     .producto button {
       background-color: #5A3D57;
       color: white;
-      border: none;
-      padding: 10px 15px;
-      margin-top: 10px;
-      border-radius: 6px;
-      cursor: pointer;
-      font-size: 1em;
     }
 
     .producto button:hover {
       background-color: #402A3C;
     }
 
+    /* Ajustes de los enlaces en cada categoría */
+    .categorias a {
+      text-decoration: none;
+      color: #5A3D57;
+      display: block;
+      padding: 10px;
+      background-color: #F3EDF1;
+      margin-bottom: 15px;
+      border-radius: 8px;
+      border: 2px solid #5A3D57;
+    }
+
+    .categorias a:hover {
+      background-color: #5A3D57;
+      color: white;
+    }
   </style>
 </head>
 <body>
@@ -184,47 +214,56 @@
     <h1>¡Verano SS 25!</h1>
   </section>
 
-  <!-- Productos destacados -->
-  <section class="productos-destacados" id="shop">
+  <!-- Productos destacados con fondo de logo -->
+  <section class="productos-destacados fondo-logo" id="shop">
     <h2>¡Verano SS 25!</h2>
     <div class="productos">
       <div class="producto">
         <p>Ropa</p>
-        <button onclick="toggleCategory('ropa')">Elegir</button>
-        <div id="ropa" style="display:none;">
-          <p><a href="ropa-senora.html">Señora</a></p>
-          <p><a href="ropa-caballero.html">Caballero</a></p>
-          <p><a href="ropa-nino.html">Niñ@</a></p>
+        <button onclick="toggleDropdown('ropa')">Elegir</button>
+        <div id="ropa" class="categorias" style="display:none;">
+          <a href="ropa-senora.html">Señora</a>
+          <a href="ropa-caballero.html">Caballero</a>
+          <a href="ropa-nino.html">Niñ@</a>
         </div>
       </div>
       <div class="producto">
         <p>Calzado</p>
-        <button onclick="toggleCategory('calzado')">Elegir</button>
-        <div id="calzado" style="display:none;">
-          <p><a href="calzado-senora.html">Señora</a></p>
-          <p><a href="calzado-caballero.html">Caballero</a></p>
-          <p><a href="calzado-nino.html">Niñ@</a></p>
+        <button onclick="toggleDropdown('calzado')">Elegir</button>
+        <div id="calzado" class="categorias" style="display:none;">
+          <a href="calzado-senora.html">Señora</a>
+          <a href="calzado-caballero.html">Caballero</a>
+          <a href="calzado-nino.html">Niñ@</a>
         </div>
       </div>
       <div class="producto">
-        <p>Ropa interior</p>
-        <button onclick="toggleCategory('ropaInterior')">Elegir</button>
-        <div id="ropaInterior" style="display:none;">
-          <p><a href="ropaInterior-senora.html">Señora</a></p>
-          <p><a href="ropaInterior-caballero.html">Caballero</a></p>
-          <p><a href="ropaInterior-nino.html">Niñ@</a></p>
+        <p>Ropa Interior</p>
+        <button onclick="toggleDropdown('ropaInterior')">Elegir</button>
+        <div id="ropaInterior" class="categorias" style="display:none;">
+          <a href="ropa-interior-senora.html">Señora</a>
+          <a href="ropa-interior-caballero.html">Caballero</a>
+          <a href="ropa-interior-nino.html">Niñ@</a>
         </div>
       </div>
     </div>
   </section>
 
-  <!-- Línea entre secciones -->
+  <!-- Separación entre productos y "Sobre Nosotras" -->
   <div class="linea"></div>
 
   <!-- Sobre nosotras -->
-  <section class="sobre-nosotras" id="about">
+  <section class="sobre-nosotras fondo-rosa" id="about">
     <h2>Sobre nosotras</h2>
     <p>Somos Reyes y Yolanda, dos mujeres y mamás emprendedoras 💜</p>
+  </section>
+
+  <!-- Contacto -->
+  <section class="contacto" id="contact">
+    <h2>Contacto</h2>
+    <p>Teléfono: 640 897645</p>
+    <p>Email: <a href="mailto:amitgesbyreyesyyoli@gmail.com">amitgesbyreyesyyoli@gmail.com</a></p>
+    <p>Instagram: <a href="https://www.instagram.com/amitgesbyreyesyyoli" target="_blank">@amitgesbyreyesyyoli</a></p>
+    <p>Dirección: Avenida Castellón, 30, Benicasim, Castellón</p>
   </section>
 
   <!-- Pie de página -->
@@ -233,12 +272,12 @@
   </footer>
 
   <script>
-    function toggleCategory(category) {
-      var categoryDiv = document.getElementById(category);
-      if (categoryDiv.style.display === "none") {
-        categoryDiv.style.display = "block";
+    function toggleDropdown(id) {
+      var dropdown = document.getElementById(id);
+      if (dropdown.style.display === "none" || dropdown.style.display === "") {
+        dropdown.style.display = "block";
       } else {
-        categoryDiv.style.display = "none";
+        dropdown.style.display = "none";
       }
     }
   </script>
