--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
     }
 
     .sobre-nosotras, .contacto {
-      background-color: #F3EDF1;
+      background-color: #F3EDF1; /* Cambié el fondo de "Sobre Nosotras" al rosa claro */
       padding: 50px 20px;
       text-align: center;
     }
