--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
     .logo img {
       display: block;
-      max-height: 60px;
+      max-height: 40px; /* Tamaño reducido del logo */
     }
 
     header nav ul {
