--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
     .logo img {
       display: block;
-      max-height: 40px; /* Tamaño reducido del logo */
+      max-height: 20px; /* Logo más pequeño */
     }
 
     header nav ul {
